{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 122,
  "lineage": "b74e96d9-2002-0f5b-41c4-f2d9fa78061a",
  "resources": [
    {
      "module": "module.glpi",
      "mode": "managed",
      "type": "aws_alb",
      "name": "lb-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:123061683589:loadbalancer/app/lb-glpi/867cdcf873153518",
            "arn_suffix": "app/lb-glpi/867cdcf873153518",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-glpi-1539226540.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:123061683589:loadbalancer/app/lb-glpi/867cdcf873153518",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-glpi",
            "security_groups": [
              "sg-0fcca2ee0d5de73f0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-008551d649746bed5"
              },
              {
                "subnet_id": "subnet-0378c4ea570c1452e"
              }
            ],
            "subnets": [
              "subnet-008551d649746bed5",
              "subnet-0378c4ea570c1452e"
            ],
            "vpc_id": "vpc-0f10b077eb6af8677",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.glpi.aws_security_group.sg-lb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_internet_gateway_attachment.igw-attachment",
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_route_table_association.rt-association-private",
            "module.vpc.aws_route_table_association.rt-association-public",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.glpi",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "lb-listener-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:123061683589:listener/app/lb-glpi/867cdcf873153518/e77032da0b60e412",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:123061683589:targetgroup/lb-tg-glpi/bef71702c29645f4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:123061683589:listener/app/lb-glpi/867cdcf873153518/e77032da0b60e412",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:123061683589:loadbalancer/app/lb-glpi/867cdcf873153518",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.glpi.aws_alb.lb-master",
            "module.glpi.aws_alb_target_group.lb-tg-master",
            "module.glpi.aws_security_group.sg-lb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_internet_gateway_attachment.igw-attachment",
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_route_table_association.rt-association-private",
            "module.vpc.aws_route_table_association.rt-association-public",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.glpi",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "lb-tg-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:123061683589:targetgroup/lb-tg-glpi/bef71702c29645f4",
            "arn_suffix": "targetgroup/lb-tg-glpi/bef71702c29645f4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:123061683589:targetgroup/lb-tg-glpi/bef71702c29645f4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lb-tg-glpi",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 3600,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_internet_gateway_attachment.igw-attachment",
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_route_table_association.rt-association-private",
            "module.vpc.aws_route_table_association.rt-association-public",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.glpi",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:security-group/sg-089219e42c316f346",
            "description": "Habilita entrada ao sg-lb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089219e42c316f346",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "POP3",
                "from_port": 110,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 110
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SMTP",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              },
              {
                "cidr_blocks": [
                  "179.125.170.200/32"
                ],
                "description": "SSH para IP especifico",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Porta alternativa HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fcca2ee0d5de73f0"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-sg-ec2-glpi",
            "name_prefix": "",
            "owner_id": "123061683589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-sg-ec2-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-sg-ec2-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.glpi.aws_security_group.sg-lb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_internet_gateway_attachment.igw-attachment",
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_route_table_association.rt-association-private",
            "module.vpc.aws_route_table_association.rt-association-public",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.glpi",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:security-group/sg-01c992f8f35460e63",
            "description": "Habilita entrada ao sg-ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c992f8f35460e63",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Porta especifica",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089219e42c316f346"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "dev-sg-efs-glpi",
            "name_prefix": "",
            "owner_id": "123061683589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-sg-efs-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-sg-efs-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.glpi.aws_security_group.sg-ec2",
            "module.glpi.aws_security_group.sg-lb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_internet_gateway_attachment.igw-attachment",
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_route_table_association.rt-association-private",
            "module.vpc.aws_route_table_association.rt-association-public",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.glpi",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:security-group/sg-0fcca2ee0d5de73f0",
            "description": "Habilita acesso HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcca2ee0d5de73f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "dev-sg-lb-glpi",
            "name_prefix": "",
            "owner_id": "123061683589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-sg-lb-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-sg-lb-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_internet_gateway_attachment.igw-attachment",
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_route_table_association.rt-association-private",
            "module.vpc.aws_route_table_association.rt-association-public",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.glpi",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:security-group/sg-0f2518c8fdab2cbcc",
            "description": "Habilita entrada ao sg-ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2518c8fdab2cbcc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Porta especifica",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089219e42c316f346"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "dev-sg-rds-glpi",
            "name_prefix": "",
            "owner_id": "123061683589",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-sg-rds-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-sg-rds-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.glpi.aws_security_group.sg-ec2",
            "module.glpi.aws_security_group.sg-lb",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_internet_gateway_attachment.igw-attachment",
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_route_table_association.rt-association-private",
            "module.vpc.aws_route_table_association.rt-association-public",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:internet-gateway/igw-02eccdd6c0416f471",
            "id": "igw-02eccdd6c0416f471",
            "owner_id": "123061683589",
            "tags": {
              "Environment": "dev",
              "Name": "igw-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "igw-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:route-table/rtb-0b7bd4c145aa33255",
            "id": "rtb-0b7bd4c145aa33255",
            "owner_id": "123061683589",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "rt-pvt-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rt-pvt-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:route-table/rtb-0ffa75551527347c3",
            "id": "rtb-0ffa75551527347c3",
            "owner_id": "123061683589",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02eccdd6c0416f471",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "rt-pub-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "rt-pub-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce436b4f26eabc24",
            "route_table_id": "rtb-0b7bd4c145aa33255",
            "subnet_id": "subnet-008c6ea9bfb576cd4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02490dcd3ce35001e",
            "route_table_id": "rtb-0b7bd4c145aa33255",
            "subnet_id": "subnet-0d04c9df96f8507ea"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rt-private",
            "module.vpc.aws_subnet.private-subnets",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015e95e2b561e55b0",
            "route_table_id": "rtb-0ffa75551527347c3",
            "subnet_id": "subnet-0378c4ea570c1452e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0442415760184a375",
            "route_table_id": "rtb-0ffa75551527347c3",
            "subnet_id": "subnet-008551d649746bed5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rt-public",
            "module.vpc.aws_subnet.public-subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:subnet/subnet-008c6ea9bfb576cd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008c6ea9bfb576cd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123061683589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet-pvt-1-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet-pvt-1-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:subnet/subnet-0d04c9df96f8507ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d04c9df96f8507ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123061683589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet-pvt-2-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet-pvt-2-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:subnet/subnet-0378c4ea570c1452e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0378c4ea570c1452e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "123061683589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet-pub-1-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet-pub-1-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:subnet/subnet-008551d649746bed5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008551d649746bed5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "123061683589",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "subnet-pub-2-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "subnet-pub-2-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "vpc_id": "vpc-0f10b077eb6af8677"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:123061683589:vpc/vpc-0f10b077eb6af8677",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03d6649f9ab802008",
            "default_route_table_id": "rtb-07b24b393efbb70d8",
            "default_security_group_id": "sg-0160a5f41e334f4a8",
            "dhcp_options_id": "dopt-09510b9c99c0bfbec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f10b077eb6af8677",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b24b393efbb70d8",
            "owner_id": "123061683589",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-glpi",
              "Project": "Jenkins-AWS com Terraform"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-glpi",
              "Project": "Jenkins-AWS com Terraform"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}